<resources>
    <string name="app_name">tic-tac-toe</string>
    <string name="un_jugador">1 player</string>
    <string name="dos_jugadores">2 players</string>
    <string name="dificultad_facil">Easy</string>
    <string name="dificultad_normal">Normal</string>
    <string name="dificultad_dificil">Insane</string>
    <string name="casilla">Title</string>
    <string name="circulos_ganan">Circles win!</string>
    <string name="aspas_ganan">Crosses win</string>
    <string name="empate">Tie!</string>
</resources>